2002-02-23  Ulrich Drepper  <drepper@redhat.com>

	* attr.c (pthread_getattr_np): Don't take thread descriptor size
	into account if USE_TLS.
	* manager.c (pthread_handle_create): Free TLS data structures if call
	failed.  Pass correct stack to clone if USE_TLS.
	* sysdeps/i386/pt-machine.h: Handle multiple inclusion.
	* sysdeps/i386/i686/pt-machine.h: Likewise.
	* sysdeps/i386/tls.h: Unconditionally include <pt-machine.h>.

	* descr.h (struct _pthread_descr_struct): Update p_header for TLS.
	Add p_stackaddr element #if USE_TLS.
	* internals.c: Include <tls.h>.
	* manager.c: Integrate creating and handling of thread descriptor
	for TLS.
	* pthread.c: Likewise.
	* sysdeps/i386/tls.h (tcbhead_t): Add self pointer.
	Include <linuxthreads/descr.h> only if TLS is really used.
	(GET_DTV): New macro.
	(TLS_INIT_TP): Initialize self pointer.

2002-02-17  Andreas Schwab  <schwab@suse.de>

	* signals.c (sigwait): Check for old sighandler being SIG_ERR,
	not NULL.

2002-02-12  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/tls.c (INSTALL_NEW_DTV): Define.
	(INSTALL_DTV): Adjust for being passed pointer to element with length.

2002-02-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/tls.h (TLS_INIT_TP): Also initialize %gs.

2002-02-08  Richard Henderson  <rth@redhat.com>

	* sysdeps/alpha/elf/pt-initfini.c: Use \n\ for multiline string.

2002-02-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/tls.h: TLS cannot be supported with FLOATING_STACKS
	after all.

2002-02-07  H.J. Lu  <hjl@gnu.org>

	* sysdeps/mips/pspinlock.c (__pthread_spin_lock): Silence the
	gcc warning.
	(__pthread_spin_lock): Remove ".set noreorder".
	* sysdeps/mips/pt-machine.h (__compare_and_swap): Liekwise.

2002-02-05  H.J. Lu  <hjl@gnu.org>

	* sysdeps/mips/pspinlock.c (__pthread_spin_lock): Not use
	branch likely.
	* sysdeps/mips/pt-machine.h (testandset): Likewise.
	(__compare_and_swap): Likewise.

2002-02-07  Ulrich Drepper  <drepper@redhat.com>
