@@ -1,3 +1,8 @@
+2002-02-27  Ulrich Drepper  <drepper@redhat.com>
+
+	* pthread.c [USE_TLS] (thread_self_stack): Correct check for upper
+	stack limit.
+
 2002-02-23  Ulrich Drepper  <drepper@redhat.com>
 
 	* attr.c (pthread_getattr_np): Don't take thread descriptor size
